Mostly complete minus captions 7/19

--- a/index.html
+++ b/index.html
@@ -3,10 +3,110 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="away_style.css" type="text/css">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+    <title> AWAY X JUNGHYE</title>
   </head>
+
   <body>
-    <p>this is a test</p>
-    <img src="suitcase.png" alt="AWAY suitcase">
+    <div class="container">
+      <div class="background">
+
+        <img src="scroll_ground.png" alt="ground w/ sign" class="scroll_ground">
+        <img src="ground.png" alt="ground" class="ground1">
+
+        <img src="ground.png" alt="ground" class="ground2">
+        <img src="ground.png" alt="ground" class="ground3">
+        <img src="ground.png" alt="ground" class="ground4">
+        <img src="ground.png" alt="ground" class="ground5">
+        <img src="ground.png" alt="ground" class="ground6">
+        <img src="ground.png" alt="ground" class="ground7">
+        <img src="ground.png" alt="ground" class="ground8">
+      </div>
+
+        <img src="suitcase.png" alt="AWAY Suitcase" class="suitcase">
+
+      <div class="ed_text">
+        <p class="desc">Hi I’m Junghye! I’m a proud Dartmouth graduate with a degree in Quantitative Social Science which means I literally spent four years trying to understand what makes humans do what they do. My favorite classes include multivariable calculus (weird, I know), game theory, econometrics, and computational text analysis. Other relevant coursework includes linear algebra, political survey research, programming and computation, multivariate analysis, and data visualization. The following are examples of some of my coursework. I also had the opportunity to study abroad in Seoul, South Korea for a semester where I studied comparative politics. When not in the library, you could find me on the golf course, taking a walk around Occum pond, or lounging on the green with my friends. The following are some examples of my coursework. </p>
+        <img src="pennant.png" alt="Dartmouth Pennant" class="pennant">
+        <img src="korean_flag.png" alt="Korean flag" class="flag">
+        <img src="click_me.png" alt="Click me icon" class="click">
+        <div class="nyhan">
+          <p class="desc">PLACEHOLDER NYHAN PROJECT</p>
+        </div>
+        <a target="_blank" href="Lab 3 Final.png"><img src="Lab 3 Final.png" alt="Data Visualization Lab" class="DataViz1"></a>
+        <a target="_blank" href="QSS82 Poster.jpg"><img src="QSS82 Poster.jpg" alt="Culminating Project Poster" class="QSS82"></a>
+        <a target="_blank" href="FL_counties.png"><img src="FL_counties.png" alt="Florida 2016 Election Results" class="DataViz2"></a>
+        <a target="_blank" href="wiid_income.png"><img src="wiid_income.png" alt="WIID Scores by Income" class="DataViz3"></a>
+        <a target="_blank" href="wiid_dens.png"><img src="wiid_dens.png" alt="WIID Score Density Plot" class="DataViz4"></a>
+        <a target="_blank" href="australia.png"><img src="australia.png" alt="Australia plot" class="DataViz5"></a>
+
+        <div class="other_ed">
+          <p class="desc"> Beyond the classroom, I have conducted research in both the government and economics departments studying topics such as electoral engagement in college students to African migration patterns. I also spent over 3 years as a Learning Fellow for Dartmouth’s Intro Calculus course. During this time, I worked with students in and out of the classroom to help them with course material and participated in weekly meetings to help professors identify what the students were struggling with. This experience has been integral in my work as a data analyst as it taught me how to effectively communicate complex, quantitative concepts to a range of audiences as well as the importance of tailoring your explanation to meet the audience where they are with their expertise. </p>
+        </div>
+
+      </div>
+
+      <div class="twoseventy">
+        <img src="270_logo.png" alt="270 Strategies Logo" class="logo_270">
+        <p class="desc">This was my first experience using real world data to provide insights for clients. I’m grateful that my time here allowed me to interact with nonprofits, political campaigns, and for-profit corporations because it gave me the chance to work with all the types of data- every structure, every level of cleanliness, and even some screenshots of Excel sheets. Through this, I was able to grow my box of data cleaning tools which has proven incredibly helpful to this day.
+	         <br>Additionally, this internship allowed me to combine the statistical skills I had learned in my classes with the communication skills I had learned as a Learning Fellow. I found that putting myself in clients’ shoes to understand what metrics and explanations would help them make the best decisions was quite similar to putting myself in student’s shoes when I’m trying to explain limits and derivatives to them.
+	          <br>Lastly, this position taught me the importance of being able to zoom in and out as a data analyst. Sometimes, I would find myself stuck on a problem and an hour and seventeen work arounds later, I would have a half solution. I quickly learned that I was getting rabbit holed with these problems and that if only I had been able to zoom out and remember the bigger picture of the analysis, I would have realized that there were other alternatives that could work. This was something that I had yet to learn in the classroom and proved to be an essential skill for my future analyses.
+        </p>
+        <img src="skills_header.png" alt="Skills and Platforms used" class="skills_header">
+        <div class="skills_list">
+          <ul>
+            <li>Excel to clean data</li>
+            <li>GIS to map candidate support using Census data</li>
+            <li>Postgres SQL to pull data for analysis</li>
+            <li>R to clean and visualize data</li>
+            <li>Tableau to build dashboards for clients</li>
+            <li>ActBlue to scrape fundraising data</li>
+            <li>Civis to pull voter files</li>
+            <li>Crimson Hexagon, Google Analytics, & Twitter Analytics to pull and anlayze social media data</li>
+          </ul>
+
+        </div>
+      </div>
+
+      <div class="glossier">
+        <img src="glossier_logo.png" alt="Glossier logo" class="logo_glossier">
+        <p class="desc">While 270 gave me a breadth of clients, Glossier gave me depth and a glimpse into the role data plays at an ever growing, direct to consumer, e-commerce brand. During my internship, I learned about a data team’s responsibility in advocating for a data driven culture, worked heavily with the Customer Experience and Logistics teams, and went from Looker novice to pro in just ten weeks.
+        	<br>In working with the CX and logistics teams, I had the opportunity to collaborate and what KPIs would be the most helpful to each team. Then, I would come up with how we would measure them using techniques such as A/B testing, propensity score matching, and probability models. For example, I collaborated with both teams to figure out how utilize Kustomer data associating product issues with order numbers into our data warehouse so this data could be analyzed. In addition to working with these teams, I helped hold company-wide Looker Office Hours to help all teams troubleshoot issues they were having with their Looker dashboards. Before my internship, I had experience with Tableau and SQL which was quite helpful in learning Looker very quickly. Furthermore, these office hours gave me the chance to further my Looker knowledge at a much faster pace while also helping other teams.
+        	<br>Glossier allowed me to see my analyses materialize into business decisions which I found incredibly exciting and helped me understand the big picture role of data in a company while also building on my technical skills and challenging me to solve new problems.
+        </p>
+        <img src="skills_header.png" alt="Skills and Platforms used" class="skills_header">
+        <div class="skills_list">
+          <ul>
+            <li>Python for NLP Analysis & k-means clustering</li>
+            <li>SQL to pull and join various datasets from the data warehouse</li>
+            <li>R to visualize data and conduct propensity score analysis</li>
+            <li>Looker to build and maintain dashboards</li>
+            <li>Kustomer to pull data for CX analysis</li>
+          </ul>
+
+        </div>
+      </div>
+
+      <div class="away">
+        <img src="away_logo.png" alt="AWAY Logo" class="logo_away">
+        <p class="desc">Throughout my internships and my classes, I’ve been obsessed with answering the question: why do people do what they do. Whether that be voting or clicking or purchasing one thing over another, using number to understand these choices more deeply is incredibly exciting to me. In searching for an answer to this question in dataset after dataset, there is a commonality that stands out: as humans, there are more characteristics we share than we do not. Despite today’s political climate, we could not run the analyses we do if there were not these common threads in how humans act and react. I feel passionate about Away’s because I believe that having the privilege to travel this globe is the greatest reminder of this fact. Given the sum of my professional and academic experiences, the opportunity to help more people realize this through smarter luggage is one I know that I would take full advantage of, and I believe that I could be an asset to Away. </p>
+      </div>
+
+      <div class="end_scene">
+        <img src="pink_away.png" alt="Pink AWAY suitcase" class="end1">
+        <img src="blue_away.png" alt="Blue AWAY suitcase" class="end2">
+        <img src="away_stack.png" alt="AWAY suitcase and bag" class="end3">
+        <img src="backpack.png" alt="AWAY backpack" class="end4">
+        <img src="signature.png" alt="Signature" class="signature">
+        <a href="https://www.linkedin.com/in/junghyekim/"><img src="linkedin_button.png" alt="LinkedIn Logo" class="end5"></a>
+        <a href="mailto:junghyenicole@gmail.com"><img src="email_button.png" alt="Email envelope" class="end6"></a>
+
+
+      </div>
+
+      </div>
+
+
+
   </body>
 </html>
