Add captions, signature, paper

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <img src="korean_flag.png" alt="Korean flag" class="flag">
         <img src="click_me.png" alt="Click me icon" class="click">
         <div class="nyhan">
-          <p class="desc">PLACEHOLDER NYHAN PROJECT</p>
+          <h3>Working Paper: Context and Credibility on Social Media:Platform and News Feed Spillover Effects on Perceived Information Credibility and Engagement Behavior</h3>
+          <p class="desc">
+          This paper is the culmination of a term long class titled Experiments in Politics. As a class, we synthesized academic research on the topic, developed an experiment to test the effects of fake news on other news within a newsfeed, put the experiment into the field, collected results, analyzed those results, and presented them in this paper intended for publication. </p>
         </div>
         <a target="_blank" href="Lab 3 Final.png"><img src="Lab 3 Final.png" alt="Data Visualization Lab" class="DataViz1"></a>
         <a target="_blank" href="QSS82 Poster.jpg"><img src="QSS82 Poster.jpg" alt="Culminating Project Poster" class="QSS82"></a>
@@ -40,6 +42,9 @@
         <a target="_blank" href="wiid_dens.png"><img src="wiid_dens.png" alt="WIID Score Density Plot" class="DataViz4"></a>
         <a target="_blank" href="australia.png"><img src="australia.png" alt="Australia plot" class="DataViz5"></a>
 
+        <div class="caption">
+          <p class="desc">The above data visualizations were made using the dplyr, rvest, and ggplot packages in R. Each dataset was gathered, cleaned, summarized, and created into a visualization by me. Code for these visualizations can be found @ <a href="https://github.com/junghye-kim">my GitHub</a></p>
+        </div>
         <div class="other_ed">
           <p class="desc"> Beyond the classroom, I have conducted research in both the government and economics departments studying topics such as electoral engagement in college students to African migration patterns. I also spent over 3 years as a Learning Fellow for Dartmouth’s Intro Calculus course. During this time, I worked with students in and out of the classroom to help them with course material and participated in weekly meetings to help professors identify what the students were struggling with. This experience has been integral in my work as a data analyst as it taught me how to effectively communicate complex, quantitative concepts to a range of audiences as well as the importance of tailoring your explanation to meet the audience where they are with their expertise. </p>
         </div>
