--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="korean_flag.png" alt="Korean flag" class="flag">
         <img src="click_me.png" alt="Click me icon" class="click">
         <div class="nyhan">
-          <h3>Working Paper: Context and Credibility on Social Media:Platform and News Feed Spillover Effects on Perceived Information Credibility and Engagement Behavior</h3>
+          <h3>Working Paper: Context and Credibility on Social Media: Platform and News Feed Spillover Effects on Perceived Information Credibility and Engagement Behavior</h3>
           <p class="desc">
           This paper is the culmination of a term long class titled Experiments in Politics. As a class, we synthesized academic research on the topic, developed an experiment to test the effects of fake news on other news within a newsfeed, put the experiment into the field, collected results, analyzed those results, and presented them in this paper intended for publication. </p>
         </div>
@@ -75,7 +75,7 @@
 
       <div class="glossier">
         <img src="glossier_logo.png" alt="Glossier logo" class="logo_glossier">
-        <p class="desc">While 270 gave me a breadth of clients, Glossier gave me depth and a glimpse into the role data plays at an ever growing, direct to consumer, e-commerce brand. During my internship, I learned about a data team’s responsibility in advocating for a data driven culture, worked heavily with the Customer Experience and Logistics teams, and went from Looker novice to pro in just ten weeks.
+        <p class="desc">While 270 gave me a breadth of clients, Glossier gave me a deep look into the role data plays at an ever growing, direct to consumer, e-commerce brand. During my internship, I learned about a data team’s responsibility in advocating for a data driven culture, worked heavily with the Customer Experience and Logistics teams, and went from Looker novice to pro in just ten weeks.
         	<br>In working with the CX and logistics teams, I had the opportunity to collaborate and what KPIs would be the most helpful to each team. Then, I would come up with how we would measure them using techniques such as A/B testing, propensity score matching, and probability models. For example, I collaborated with both teams to figure out how utilize Kustomer data associating product issues with order numbers into our data warehouse so this data could be analyzed. In addition to working with these teams, I helped hold company-wide Looker Office Hours to help all teams troubleshoot issues they were having with their Looker dashboards. Before my internship, I had experience with Tableau and SQL which was quite helpful in learning Looker very quickly. Furthermore, these office hours gave me the chance to further my Looker knowledge at a much faster pace while also helping other teams.
         	<br>Glossier allowed me to see my analyses materialize into business decisions which I found incredibly exciting and helped me understand the big picture role of data in a company while also building on my technical skills and challenging me to solve new problems.
         </p>
@@ -94,7 +94,7 @@
 
       <div class="away">
         <img src="away_logo.png" alt="AWAY Logo" class="logo_away">
-        <p class="desc">Throughout my internships and my classes, I’ve been obsessed with answering the question: why do people do what they do. Whether that be voting or clicking or purchasing one thing over another, using number to understand these choices more deeply is incredibly exciting to me. In searching for an answer to this question in dataset after dataset, there is a commonality that stands out: as humans, there are more characteristics we share than we do not. Despite today’s political climate, we could not run the analyses we do if there were not these common threads in how humans act and react. I feel passionate about Away’s because I believe that having the privilege to travel this globe is the greatest reminder of this fact. Given the sum of my professional and academic experiences, the opportunity to help more people realize this through smarter luggage is one I know that I would take full advantage of, and I believe that I could be an asset to Away. </p>
+        <p class="desc">Throughout my internships and my classes, I’ve been obsessed with answering the question: why do people do what they do. Whether that be voting or clicking or purchasing one thing over another, using number to understand these choices more deeply is incredibly exciting to me. In searching for an answer to this question in dataset after dataset, there is a commonality that stands out: as humans, there are more characteristics we share than we do not. Despite today’s political climate, we could not run the analyses we do if there were not these common threads in how humans act and react. I feel passionate about Away because I believe that having the privilege to travel this globe is the greatest reminder of this fact. Given the sum of my professional and academic experiences, the opportunity to help more people realize this through smarter luggage is one I know that I would take full advantage of, and I believe that I could be an asset to Away. </p>
       </div>
 
       <div class="end_scene">
