link in sep window

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a target="_blank" href="australia.png"><img src="australia.png" alt="Australia plot" class="DataViz5"></a>
 
         <div class="caption">
-          <p class="desc">The above data visualizations were made using the dplyr, rvest, and ggplot packages in R. Each dataset was gathered, cleaned, summarized, and created into a visualization by me. Code for these visualizations can be found @ <a href="https://github.com/junghye-kim/data_viz">my GitHub</a></p>
+          <p class="desc">The above data visualizations were made using the dplyr, rvest, and ggplot packages in R. Each dataset was gathered, cleaned, summarized, and created into a visualization by me. Code for these visualizations can be found @ <a href="https://github.com/junghye-kim/data_viz" target="_blank">my GitHub</a></p>
         </div>
         <div class="other_ed">
           <p class="desc"> Beyond the classroom, I have conducted research in both the government and economics departments studying topics such as electoral engagement in college students to African migration patterns. I also spent over 3 years as a Learning Fellow for Dartmouth’s Intro Calculus course. During this time, I worked with students in and out of the classroom to help them with course material and participated in weekly meetings to help professors identify what the students were struggling with. This experience has been integral in my work as a data analyst as it taught me how to effectively communicate complex, quantitative concepts to a range of audiences as well as the importance of tailoring your explanation to meet the audience where they are with their expertise. </p>
